--- a/Adapter/MMIAdapterUnity/.gitignore
+++ b/Adapter/MMIAdapterUnity/.gitignore
@@ -95,3 +95,5 @@ crashlytics-build.properties
 /Assets/Plugins/Utf8Json.dll
 /Assets/Plugins/MMIUnity.dll
 /Assets/Plugins/System.Threading.Tasks.Extensions.dll
+
+*.log
