--- a/Adapter/MMIAdapterUnity/Packages/manifest.json
+++ b/Adapter/MMIAdapterUnity/Packages/manifest.json
@@ -7,7 +7,7 @@
     "com.unity.textmeshpro": "2.1.4",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
-    "de.dfki.mmiunity-core": "ssh://git@github.com/dfki-asr/MMIUnity-Core.git#feature/InitialSetup",
+    "de.dfki.mmiunity-core": "file:E:/code/NewMOSIM/test2/MOSIM/Repos/Packages/MMIUnity-Core",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
