--- a/Demos/SimpleUnityDemo/Packages/manifest.json
+++ b/Demos/SimpleUnityDemo/Packages/manifest.json
@@ -7,8 +7,8 @@
     "com.unity.textmeshpro": "2.1.4",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
-    "de.dfki.mmiunity-core": "file:E:/code/NewMOSIM/MOSIM/Repos/Packages/MMIUnity-Core",
-    "de.dfki.mmiunity-targetengine": "file:E:/code/NewMOSIM/MOSIM/Repos/Packages/MMIUnity-TargetEngine",
+    "de.dfki.mmiunity-core": "https://github.com/dfki-asr/MMIUnity-Core.git#feature/InitialSetup",
+    "de.dfki.mmiunity-targetengine": "https://github.com/dfki-asr/MMIUnity-TargetEngine.git#feature/InitialSetup",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
