--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "MMUs/dfki.mmiunity-core/MMIUnity-Core"]
 	path = MMUs/dfki.mmiunity-core/MMIUnity-Core
 	url = ../MMIUnity-Core.git
+	branch = feature/FrameworkV1.1
