Updated modules and packages to master

--- a/Tools/SkeletonConfigurator/Packages/manifest.json
+++ b/Tools/SkeletonConfigurator/Packages/manifest.json
@@ -7,7 +7,7 @@
     "com.unity.textmeshpro": "2.1.4",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
-    "de.dfki.mmiunity-core": "ssh://git@github.com/dfki-asr/MMIUnity-Core.git#feature/FrameworkV1.1",
+    "de.dfki.mmiunity-core": "https://github.com/dfki-asr/MMIUnity-Core.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
