--- a/Tools/SkeletonConfigurator/Packages/manifest.json
+++ b/Tools/SkeletonConfigurator/Packages/manifest.json
@@ -9,7 +9,7 @@
     "com.unity.textmeshpro": "2.1.4",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
-    "de.dfki.mmiunity-core": "https://github.com/dfki-asr/MMIUnity-Core.git",
+    "de.dfki.mmiunity-core": "file:C:/Users/nibr02-admin/Desktop/MOSIM/Repos/Packages/MMIUnity-Core",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
