Changed line Update="description.json" to Include="description.json" for testing in docker.Deployment in Windows was a success.

--- a/MMUs/Idle/Idle.csproj
+++ b/MMUs/Idle/Idle.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="description.json">
+    <None Include="description.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Idleassets">
