--- a/Services/UnityPathPlanning/UnityPathPlanningService/Packages/manifest.json
+++ b/Services/UnityPathPlanning/UnityPathPlanningService/Packages/manifest.json
@@ -10,7 +10,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
-    "de.dfki.mmiunity-core": "file:../../../../../Packages/MMIUnity-Core",
+    "de.dfki.mmiunity-core": "https://github.com/dfki-asr/MMIUnity-Core.git#develop",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
